@@ -5,6 +5,7 @@ Revision history for Perl extension Feersum
         Add missing JSON::XS test-dep.
         Fix: write() prototype was incorrect.
         Fix: writer not flushing on DESTROY.
+        Fix: IO::Handle in PSGI streaming response.
 
 0.971 Wed Oct  6 16:21:00 2010 -0700
         Fix the feersum script.
